Bug Fixes Fixed cron-job sending email repeatedly by adding an isEmailed state that tracks users who already recieved an email Registered birthdays now selects where isEmailed is true, sorting in descending order, newly added first

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -178,8 +178,8 @@
 <body>
   <div class="container">
     <header>
-      <h1>🎂 Birthday Reminder</h1>
-      <p>Automatically send birthday wishes to your customers!</p>
+      <h1>🎂 Birthday Reminder App</h1>
+      <p>Automatically send birthday wishes to your target (from my personal email)!</p>
     </header>
     
     <div class="content">
@@ -211,7 +211,7 @@
       <div class="users-list">
         <h2>Registered Birthdays (<%= users.length %>)</h2>
         <% if (users.length === 0) { %>
-          <p>No birthdays registered yet. Add your first customer!</p>
+          <p>No birthdays registered yet. Add your first email now!</p>
         <% } else { %>
           <% users.forEach(user => { %>
             <div class="user-card">
