Update Readme, More fixes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -170,7 +170,7 @@
             text-align: center;
             padding: 10px 0;
             background-color: #f7f7f7;
-            color: #45a049;
+            color: #6a11cb;
             font-size: 14px;
         }
   </style>
