--- a/views/sucess.ejs
+++ b/views/sucess.ejs
@@ -63,6 +63,18 @@
     .btn:hover {
       transform: translateY(-2px);
     }
+
+    .footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            text-align: center;
+            padding: 10px 0;
+            background-color: #f7f7f7;
+            color: #45a049;
+            font-size: 14px;
+        }
   </style>
 </head>
 <body>
@@ -72,5 +84,8 @@
     <p><%= message %></p>
     <a href="/" class="btn">Add Another Birthday</a>
   </div>
+    <div class="footer">
+       <strong>Made with ⚡ by Mikatech/Crescentech</strong>
+    </div>
 </body>
 </html>
